--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Olympic FutMatch</title>
-    <link rel="stylesheet" href="/css/stylehome.css" />
+    <link rel="stylesheet" href="css/stylehome.css" />
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <header id="encabezadoHome" class="header-home">
         <img id="logoPequeño">
         <h1>Olympic FutMatch</h1>
-        <img src="/multimedia/home/logogrande.png">
+        <img src="multimedia/home/logogrande.png">
     </header>
 
     <!--Esto es para hacer un sistema de navegación para que la gente navegue por la informacion de forma mas sencilla-->
@@ -21,24 +21,24 @@
         
         <!--Botón para las características del partido-->
         <div class="nav-item">
-            <img src="/multimedia/home/portadacaracteristicas.png">
-            <a href="/paguinas/endesarollo.html">
+            <img src="multimedia/home/portadacaracteristicas.png">
+            <a href="paguinas/endesarollo.html">
                 <button>GO</button>
             </a>
         </div>
 
         <!--Botón para los premios-->
         <div class="nav-item">
-            <img src="/multimedia/home/portadapremios.png">
-            <a href="/paguinas/premios.html">
+            <img src="multimedia/home/portadapremios.png">
+            <a href="paguinas/premios.html">
                 <button>GO</button>
             </a>
         </div>
 
         <!--Botón para la inscripción-->
         <div class="nav-item">
-            <img src="/multimedia/home/portadainscripciones.png">
-            <a href="/paguinas/endesarollo.html">
+            <img src="multimedia/home/portadainscripciones.png">
+            <a href="paguinas/endesarollo.html">
                 <button>Go</button>
             </a>
         </div>
@@ -57,7 +57,7 @@
                 <button>Inscribete</button>
             </a>
         </div>
-        <img src="/multimedia/home/imagensubscripcion.png   ">
+        <img src="multimedia/home/imagensubscripcion.png   ">
     </section>
 
     <footer>
@@ -67,3 +67,4 @@
     <!--Cuando las paginas especificas estén echas ay que añadir aquí pequeños resúmenes que estén ampliados en las otras paginas-->
 </body>
 </html>
+
